# ProcedureFC

./: (Windows) pyproject.toml  .gitignore  BenchmarkControl.py  BenchmarkUI.py  DataType.py  DecompositionAgent.py  DuckDuckGoSE.py  FactcheckControl.py  FactcheckUI.py  FlowchartAgent.py  GoogleSE.py  LLMAgent.py  LLMBenchControl.py  LLMModel.py  Main.py  NoDecompositionBenchControl.py  NoIndividualQueryBenchControl.py  NoStructureBenchControl.py  OntologyStructureBenchControl.py  OpenAIAPI.py  OpenAIDefaultBenchControl.py  QueryGenerator.py  README.md  SearchEngine.py  SimpleCommonQueryBenchControl.py  VerificationAgent.py  abci.sh  pyproject.toml  requirements.txt  tsubame.sh  vLLMDefaultBenchControl.py  vLLMModel.py
dataset/: dataset0.5.3.json
prompts/: prompt_decompose5.7.3.txt  prompt_decompose_no_structure1.0.0.txt  prompt_decompose_ontology0.0.1.txt  prompt_flowchart0.0.0.txt  prompt_query_common0.0.1.txt  prompt_query_individual0.0.0.txt  prompt_query_simple0.0.0.txt  prompt_simple_llm_bench0.0.0.txt  prompt_verify1.2.6.txt  prompt_verifyFC0.0.1.txt
results/FASTFACT/26.01.07_14.35 stride=30_m=6_n=5_logprob=0p995/: benchmark_summary.txt  claims.json  claims.jsonl  fsfact_score_n=5.csv  fsfact_score_n=5.json
results/NoDecompositionBench/251219-00.14.16/: benchmark_summary.txt  decomposition_results.json  flowchart_results.json  query_results.json  search_results.json  verification_results.json
results/NoIndividualQueryBench/251219-03.35.19/: benchmark_summary.txt  decomposition_results.json  flowchart_results.json  query_results.json  search_results.json  (+1 more)
(+52 files in other folders)
